backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chanting-kakigori
  labels:
    name: chanting-kakigori
