backend/k8s/kakigori-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kakigori-ws
  namespace: chanting-kakigori
  labels:
    app: kakigori-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakigori-ws
  template:
    metadata:
      labels:
        app: kakigori-ws
    spec:
      containers:
        - name: kakigori-ws
          image: us-central1-docker.pkg.dev/chanting-472914/chanting-kakigori-repo/kakigori-ws:latest
          ports:
            - containerPort: 50051
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: kakigori-ws-service
  namespace: chanting-kakigori
spec:
  selector:
    app: kakigori-ws
  ports:
    - port: 50051
      targetPort: 50051
  type: ClusterIP
